# k-prolog

./: .gitignore  1.inp  Kprolog  PrologConsole  PrologParser.py  PrologSolver  README.md  arithmetic.pl  child.pl  child.txt  child2.txt  err.py  gcd.kpl  gcd.pl  halt.pl  lab1.kpl  lab2.pl  main.py  nqueens.pl  pyproject.toml  runtests.sh  sum.pl  test_complex_prime.py  test_constraint_delay.py  test_final_solver.py  test_fixed_is_prime.py  test_goldbach.py  test_goldbach_components.py  test_goldbach_debug.py  test_goldbach_fixed.py  test_has_factor_direct.py  test_is_prime_components.py  test_mod_issue.py  test_negation_fix.py  test_next_prime_debug.py  test_next_prime_fixed.py  test_next_prime_simple.py  test_prime_list_comprehensive.py  test_prime_list_output.py  test_read.kpl  (+7 more)
CONSOLE/: repl.py
GCD/: 1.inp  1.out  10.inp  2.inp  2.out  3.inp  3.out  4.inp  4.out  5.inp  5.out  6.out  7.inp  8.inp  8.out  9.inp  9.out
PARSER/: ast.py  parser.py
SOLVER/: builtin.py  solver.py  unification.py
TEST/: child.pl  gcd1.pl  ipl.pl  list.pl  list_test.py  list_test_kr.py  logic.pl  operator_test.py  operator_test_kr.py  repl_test.py  repl_test_kr.py  sum.pl
TESTSUITE/: arithmetic_puzzle.pl  binary_search_tree.pl  creating_lists.pl  depth_first_order.pl  drop every N'th element from a list.pl  duplicate_the_elements_of_a_list_a_given_number_of_times.pl  eight_queens.pl  eliminate_duplicates.pl  english_number_words.pl  goldbach.pl  gray_code.pl  height_balanced_tree.pl  huffman_code(NOT DONE).pl  internal_path.pl  is_tree.pl  knights_tour.pl  last_element_of_a_list.pl  (+14 more)
(+46 files in other folders)
