[project]
name = "k-prolog"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
ruff = "^0.12.0"

[tool.ruff]
target-version = "py313"
line-length = 80
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "B"]     # 오류, 포매팅, import, bugbear
ignore = ["E501"]                 # 너무 긴 줄은 무시

[tool.ruff.format]
quote-style = "double"
